[metadata]
name = pycuckoo
version = attr: cuckoo.__version__
description = a cuckoo filter
license = MIT
author = mikeshardmind
author_email = michael@michaelhall.tech
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only

[options]
packages = cuckoo
python_requires = >=3
setup_requires =
    setuptools>=41.0.0
    wheel
install_requires =
    numpy
    xxhash